parser.output
Terminals unused in grammar

   TOKEN_ERRO


State 102 conflicts: 1 shift/reduce
State 170 conflicts: 2 reduce/reduce
State 183 conflicts: 8 shift/reduce
State 184 conflicts: 8 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: element

    2 element: global_variavel_decla element
    3        | novos_tipos_decla element
    4        | funcoes element
    5        | %empty

    6 global_variavel_decla: TK_IDENTIFICADOR static_opcional tipo TK_IDENTIFICADOR
    7                      | TK_IDENTIFICADOR static_opcional TK_IDENTIFICADOR TK_IDENTIFICADOR

    8 novos_tipos_decla: TK_PR_CLASS TK_IDENTIFICADOR '[' lista_campos ']' ';'

    9 lista_campos: encapsulamento TK_IDENTIFICADOR ':' lista_campos
   10             | encapsulamento TK_IDENTIFICADOR

   11 encapsulamento: TK_PR_PRIVATE
   12               | TK_PR_PROTECTED
   13               | TK_PR_PUBLIC

   14 funcoes: static_opcional tipo TK_IDENTIFICADOR lista_parametros bloco

   15 lista_parametros: parametro ',' lista_parametros
   16                 | parametro

   17 parametro: const_opcional tipo TK_IDENTIFICADOR

   18 bloco: '{' comandos '}'

   19 comandos: comando ';' comandos
   20         | comando ';'

   21 comando: local_variavel_decla
   22        | atribuicao
   23        | entrada_saida_retorno
   24        | chamada_funcao
   25        | shift
   26        | bloco
   27        | fluxo_controle
   28        | case

   29 local_variavel_decla: static_opcional const_opcional tipo TK_IDENTIFICADOR
   30                     | static_opcional const_opcional tipo TK_IDENTIFICADOR TK_OC_LE literal

   31 literal: operando_exp_arit_literal
   32        | TK_LIT_FALSE
   33        | TK_LIT_TRUE
   34        | TK_LIT_CHAR
   35        | TK_LIT_STRING

   36 operando_exp_arit_literal: TK_LIT_INT
   37                          | TK_LIT_FLOAT

   38 atribuicao: atribuicao_primitivo
   39           | atribuicao_tipo_usuario

   40 atribuicao_primitivo: TK_IDENTIFICADOR '=' expressao
   41                     | '[' expressao ']' '=' expressao

   42 atribuicao_tipo_usuario: TK_IDENTIFICADOR '$' campo '=' expressao
   43                        | '[' expressao ']' '$' campo '=' expressao

   44 campo: TK_IDENTIFICADOR

   45 entrada_saida_retorno: TK_PR_INPUT expressao
   46                      | TK_PR_OUTPUT lista_expressao
   47                      | retorno
   48                      | break
   49                      | continue

   50 lista_expressao: expressao ',' lista_expressao
   51                | expressao

   52 chamada_funcao: TK_IDENTIFICADOR '(' lista_argumentos ')'

   53 lista_argumentos: argumento ',' lista_argumentos
   54                 | argumento

   55 argumento: expressao
   56          | '.'

   57 shift: TK_IDENTIFICADOR shift_simbol literal
   58      | TK_IDENTIFICADOR '$' campo shift_simbol literal
   59      | TK_IDENTIFICADOR '[' expressao ']' shift_simbol literal
   60      | TK_IDENTIFICADOR '[' expressao ']' '$' campo shift_simbol literal
   61      | TK_IDENTIFICADOR shift_simbol expressao
   62      | TK_IDENTIFICADOR '$' campo shift_simbol expressao
   63      | TK_IDENTIFICADOR '[' expressao ']' shift_simbol expressao
   64      | TK_IDENTIFICADOR '[' expressao ']' '$' campo shift_simbol expressao

   65 shift_simbol: TK_OC_SL
   66             | TK_OC_SR

   67 retorno: TK_PR_RETURN expressao ';'

   68 break: TK_PR_BREAK ';'

   69 continue: TK_PR_CONTINUE ';'

   70 case: TK_PR_CASE TK_LIT_INT ':'

   71 fluxo_controle: TK_PR_IF '(' expressao ')' TK_PR_THEN bloco
   72               | TK_PR_IF '(' expressao ')' TK_PR_THEN bloco TK_PR_ELSE bloco
   73               | TK_PR_FOREACH '(' TK_IDENTIFICADOR ':' lista_expressao ')' bloco
   74               | TK_PR_FOR '(' lista_comandos ':' expressao ':' lista_comandos ')' bloco
   75               | TK_PR_WHILE '(' expressao ')' TK_PR_DO bloco
   76               | TK_PR_DO bloco TK_PR_WHILE '(' expressao ')'
   77               | TK_PR_SWITCH '(' expressao ')' bloco

   78 lista_comandos: comando ',' lista_comandos ';'
   79               | comando ';'

   80 expressao: exp_aritmetica
   81          | exp_logica
   82          | exp_pipes

   83 exp_aritmetica: expressao_unaria
   84               | expressao_unaria operador_exp_arit exp_aritmetica
   85               | '(' exp_aritmetica ')'

   86 operando: TK_IDENTIFICADOR
   87         | TK_IDENTIFICADOR '[' expressao ']'
   88         | operando_exp_arit_literal
   89         | chamada_funcao

   90 expressao_unaria: operador_unario expressao_unaria
   91                 | operando

   92 operador_unario: '+'
   93                | '-'
   94                | '*'
   95                | '!'
   96                | '?'
   97                | '#'
   98                | '&'

   99 operador_exp_arit: '+'
  100                  | '-'
  101                  | '*'
  102                  | '/'
  103                  | '%'
  104                  | '|'
  105                  | '^'
  106                  | '&'

  107 exp_logica: expressao operador_relacional expressao
  108           | expressao operador_logico expressao

  109 operador_relacional: TK_OC_EQ
  110                    | TK_OC_GE
  111                    | TK_OC_NE
  112                    | '>'
  113                    | '<'

  114 operador_logico: TK_OC_AND
  115                | TK_OC_OR
  116                | '!'

  117 exp_pipes: chamada_funcao operador_pipe exp_pipes
  118          | chamada_funcao operador_pipe chamada_funcao

  119 operador_pipe: TK_OC_FORWARD_PIPE
  120              | TK_OC_BASH_PIPE

  121 tipo: TK_PR_FLOAT
  122     | TK_PR_BOOL
  123     | TK_PR_CHAR
  124     | TK_PR_STRING
  125     | TK_PR_INT

  126 static_opcional: TK_PR_STATIC
  127                | %empty

  128 const_opcional: TK_PR_CONST
  129               | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 95 116
'#' (35) 97
'$' (36) 42 43 58 60 62 64
'%' (37) 103
'&' (38) 98 106
'(' (40) 52 71 72 73 74 75 76 77 85
')' (41) 52 71 72 73 74 75 76 77 85
'*' (42) 94 101
'+' (43) 92 99
',' (44) 15 50 53 78
'-' (45) 93 100
'.' (46) 56
'/' (47) 102
':' (58) 9 70 73 74
';' (59) 8 19 20 67 68 69 78 79
'<' (60) 113
'=' (61) 40 41 42 43
'>' (62) 112
'?' (63) 96
'[' (91) 8 41 43 59 60 63 64 87
']' (93) 8 41 43 59 60 63 64 87
'^' (94) 105
'{' (123) 18
'|' (124) 104
'}' (125) 18
error (256)
TK_PR_INT (258) 125
TK_PR_FLOAT (259) 121
TK_PR_BOOL (260) 122
TK_PR_CHAR (261) 123
TK_PR_STRING (262) 124
TK_PR_IF (263) 71 72
TK_PR_THEN (264) 71 72
TK_PR_ELSE (265) 72
TK_PR_WHILE (266) 75 76
TK_PR_DO (267) 75 76
TK_PR_INPUT (268) 45
TK_PR_OUTPUT (269) 46
TK_PR_RETURN (270) 67
TK_PR_CONST (271) 128
TK_PR_STATIC (272) 126
TK_PR_FOREACH (273) 73
TK_PR_FOR (274) 74
TK_PR_SWITCH (275) 77
TK_PR_CASE (276) 70
TK_PR_BREAK (277) 68
TK_PR_CONTINUE (278) 69
TK_PR_CLASS (279) 8
TK_PR_PRIVATE (280) 11
TK_PR_PUBLIC (281) 13
TK_PR_PROTECTED (282) 12
TK_OC_LE (283) 30
TK_OC_GE (284) 110
TK_OC_EQ (285) 109
TK_OC_NE (286) 111
TK_OC_AND (287) 114
TK_OC_OR (288) 115
TK_OC_SL (289) 65
TK_OC_SR (290) 66
TK_OC_FORWARD_PIPE (291) 119
TK_OC_BASH_PIPE (292) 120
TK_LIT_INT (293) 36 70
TK_LIT_FLOAT (294) 37
TK_LIT_FALSE (295) 32
TK_LIT_TRUE (296) 33
TK_LIT_CHAR (297) 34
TK_LIT_STRING (298) 35
TK_IDENTIFICADOR (299) 6 7 8 9 10 14 17 29 30 40 42 44 52 57 58 59
    60 61 62 63 64 73 86 87
TOKEN_ERRO (300)


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
programa (72)
    on left: 1, on right: 0
element (73)
    on left: 2 3 4 5, on right: 1 2 3 4
global_variavel_decla (74)
    on left: 6 7, on right: 2
novos_tipos_decla (75)
    on left: 8, on right: 3
lista_campos (76)
    on left: 9 10, on right: 8 9
encapsulamento (77)
    on left: 11 12 13, on right: 9 10
funcoes (78)
    on left: 14, on right: 4
lista_parametros (79)
    on left: 15 16, on right: 14 15
parametro (80)
    on left: 17, on right: 15 16
bloco (81)
    on left: 18, on right: 14 26 71 72 73 74 75 76 77
comandos (82)
    on left: 19 20, on right: 18 19
comando (83)
    on left: 21 22 23 24 25 26 27 28, on right: 19 20 78 79
local_variavel_decla (84)
    on left: 29 30, on right: 21
literal (85)
    on left: 31 32 33 34 35, on right: 30 57 58 59 60
operando_exp_arit_literal (86)
    on left: 36 37, on right: 31 88
atribuicao (87)
    on left: 38 39, on right: 22
atribuicao_primitivo (88)
    on left: 40 41, on right: 38
atribuicao_tipo_usuario (89)
    on left: 42 43, on right: 39
campo (90)
    on left: 44, on right: 42 43 58 60 62 64
entrada_saida_retorno (91)
    on left: 45 46 47 48 49, on right: 23
lista_expressao (92)
    on left: 50 51, on right: 46 50 73
chamada_funcao (93)
    on left: 52, on right: 24 89 117 118
lista_argumentos (94)
    on left: 53 54, on right: 52 53
argumento (95)
    on left: 55 56, on right: 53 54
shift (96)
    on left: 57 58 59 60 61 62 63 64, on right: 25
shift_simbol (97)
    on left: 65 66, on right: 57 58 59 60 61 62 63 64
retorno (98)
    on left: 67, on right: 47
break (99)
    on left: 68, on right: 48
continue (100)
    on left: 69, on right: 49
case (101)
    on left: 70, on right: 28
fluxo_controle (102)
    on left: 71 72 73 74 75 76 77, on right: 27
lista_comandos (103)
    on left: 78 79, on right: 74 78
expressao (104)
    on left: 80 81 82, on right: 40 41 42 43 45 50 51 55 59 60 61 62
    63 64 67 71 72 74 75 76 77 87 107 108
exp_aritmetica (105)
    on left: 83 84 85, on right: 80 84 85
operando (106)
    on left: 86 87 88 89, on right: 91
expressao_unaria (107)
    on left: 90 91, on right: 83 84 90
operador_unario (108)
    on left: 92 93 94 95 96 97 98, on right: 90
operador_exp_arit (109)
    on left: 99 100 101 102 103 104 105 106, on right: 84
exp_logica (110)
    on left: 107 108, on right: 81
operador_relacional (111)
    on left: 109 110 111 112 113, on right: 107
operador_logico (112)
    on left: 114 115 116, on right: 108
exp_pipes (113)
    on left: 117 118, on right: 82 117
operador_pipe (114)
    on left: 119 120, on right: 117 118
tipo (115)
    on left: 121 122 123 124 125, on right: 6 14 17 29 30
static_opcional (116)
    on left: 126 127, on right: 6 7 14 29 30
const_opcional (117)
    on left: 128 129, on right: 17 29 30


State 0

    0 $accept: . programa $end

    TK_PR_STATIC      shift, and go to state 1
    TK_PR_CLASS       shift, and go to state 2
    TK_IDENTIFICADOR  shift, and go to state 3

    $end      reduce using rule 5 (element)
    $default  reduce using rule 127 (static_opcional)

    programa               go to state 4
    element                go to state 5
    global_variavel_decla  go to state 6
    novos_tipos_decla      go to state 7
    funcoes                go to state 8
    static_opcional        go to state 9


State 1

  126 static_opcional: TK_PR_STATIC .

    $default  reduce using rule 126 (static_opcional)


State 2

    8 novos_tipos_decla: TK_PR_CLASS . TK_IDENTIFICADOR '[' lista_campos ']' ';'

    TK_IDENTIFICADOR  shift, and go to state 10


State 3

    6 global_variavel_decla: TK_IDENTIFICADOR . static_opcional tipo TK_IDENTIFICADOR
    7                      | TK_IDENTIFICADOR . static_opcional TK_IDENTIFICADOR TK_IDENTIFICADOR

    TK_PR_STATIC  shift, and go to state 1

    $default  reduce using rule 127 (static_opcional)

    static_opcional  go to state 11


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 12


State 5

    1 programa: element .

    $default  reduce using rule 1 (programa)


State 6

    2 element: global_variavel_decla . element

    TK_PR_STATIC      shift, and go to state 1
    TK_PR_CLASS       shift, and go to state 2
    TK_IDENTIFICADOR  shift, and go to state 3

    $end      reduce using rule 5 (element)
    $default  reduce using rule 127 (static_opcional)

    element                go to state 13
    global_variavel_decla  go to state 6
    novos_tipos_decla      go to state 7
    funcoes                go to state 8
    static_opcional        go to state 9


State 7

    3 element: novos_tipos_decla . element

    TK_PR_STATIC      shift, and go to state 1
    TK_PR_CLASS       shift, and go to state 2
    TK_IDENTIFICADOR  shift, and go to state 3

    $end      reduce using rule 5 (element)
    $default  reduce using rule 127 (static_opcional)

    element                go to state 14
    global_variavel_decla  go to state 6
    novos_tipos_decla      go to state 7
    funcoes                go to state 8
    static_opcional        go to state 9


State 8

    4 element: funcoes . element

    TK_PR_STATIC      shift, and go to state 1
    TK_PR_CLASS       shift, and go to state 2
    TK_IDENTIFICADOR  shift, and go to state 3

    $end      reduce using rule 5 (element)
    $default  reduce using rule 127 (static_opcional)

    element                go to state 15
    global_variavel_decla  go to state 6
    novos_tipos_decla      go to state 7
    funcoes                go to state 8
    static_opcional        go to state 9


State 9

   14 funcoes: static_opcional . tipo TK_IDENTIFICADOR lista_parametros bloco

    TK_PR_INT     shift, and go to state 16
    TK_PR_FLOAT   shift, and go to state 17
    TK_PR_BOOL    shift, and go to state 18
    TK_PR_CHAR    shift, and go to state 19
    TK_PR_STRING  shift, and go to state 20

    tipo  go to state 21


State 10

    8 novos_tipos_decla: TK_PR_CLASS TK_IDENTIFICADOR . '[' lista_campos ']' ';'

    '['  shift, and go to state 22


State 11

    6 global_variavel_decla: TK_IDENTIFICADOR static_opcional . tipo TK_IDENTIFICADOR
    7                      | TK_IDENTIFICADOR static_opcional . TK_IDENTIFICADOR TK_IDENTIFICADOR

    TK_PR_INT         shift, and go to state 16
    TK_PR_FLOAT       shift, and go to state 17
    TK_PR_BOOL        shift, and go to state 18
    TK_PR_CHAR        shift, and go to state 19
    TK_PR_STRING      shift, and go to state 20
    TK_IDENTIFICADOR  shift, and go to state 23

    tipo  go to state 24


State 12

    0 $accept: programa $end .

    $default  accept


State 13

    2 element: global_variavel_decla element .

    $default  reduce using rule 2 (element)


State 14

    3 element: novos_tipos_decla element .

    $default  reduce using rule 3 (element)


State 15

    4 element: funcoes element .

    $default  reduce using rule 4 (element)


State 16

  125 tipo: TK_PR_INT .

    $default  reduce using rule 125 (tipo)


State 17

  121 tipo: TK_PR_FLOAT .

    $default  reduce using rule 121 (tipo)


State 18

  122 tipo: TK_PR_BOOL .

    $default  reduce using rule 122 (tipo)


State 19

  123 tipo: TK_PR_CHAR .

    $default  reduce using rule 123 (tipo)


State 20

  124 tipo: TK_PR_STRING .

    $default  reduce using rule 124 (tipo)


State 21

   14 funcoes: static_opcional tipo . TK_IDENTIFICADOR lista_parametros bloco

    TK_IDENTIFICADOR  shift, and go to state 25


State 22

    8 novos_tipos_decla: TK_PR_CLASS TK_IDENTIFICADOR '[' . lista_campos ']' ';'

    TK_PR_PRIVATE    shift, and go to state 26
    TK_PR_PUBLIC     shift, and go to state 27
    TK_PR_PROTECTED  shift, and go to state 28

    lista_campos    go to state 29
    encapsulamento  go to state 30


State 23

    7 global_variavel_decla: TK_IDENTIFICADOR static_opcional TK_IDENTIFICADOR . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 31


State 24

    6 global_variavel_decla: TK_IDENTIFICADOR static_opcional tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 32


State 25

   14 funcoes: static_opcional tipo TK_IDENTIFICADOR . lista_parametros bloco

    TK_PR_CONST  shift, and go to state 33

    $default  reduce using rule 129 (const_opcional)

    lista_parametros  go to state 34
    parametro         go to state 35
    const_opcional    go to state 36


State 26

   11 encapsulamento: TK_PR_PRIVATE .

    $default  reduce using rule 11 (encapsulamento)


State 27

   13 encapsulamento: TK_PR_PUBLIC .

    $default  reduce using rule 13 (encapsulamento)


State 28

   12 encapsulamento: TK_PR_PROTECTED .

    $default  reduce using rule 12 (encapsulamento)


State 29

    8 novos_tipos_decla: TK_PR_CLASS TK_IDENTIFICADOR '[' lista_campos . ']' ';'

    ']'  shift, and go to state 37


State 30

    9 lista_campos: encapsulamento . TK_IDENTIFICADOR ':' lista_campos
   10             | encapsulamento . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 38


State 31

    7 global_variavel_decla: TK_IDENTIFICADOR static_opcional TK_IDENTIFICADOR TK_IDENTIFICADOR .

    $default  reduce using rule 7 (global_variavel_decla)


State 32

    6 global_variavel_decla: TK_IDENTIFICADOR static_opcional tipo TK_IDENTIFICADOR .

    $default  reduce using rule 6 (global_variavel_decla)


State 33

  128 const_opcional: TK_PR_CONST .

    $default  reduce using rule 128 (const_opcional)


State 34

   14 funcoes: static_opcional tipo TK_IDENTIFICADOR lista_parametros . bloco

    '{'  shift, and go to state 39

    bloco  go to state 40


State 35

   15 lista_parametros: parametro . ',' lista_parametros
   16                 | parametro .

    ','  shift, and go to state 41

    $default  reduce using rule 16 (lista_parametros)


State 36

   17 parametro: const_opcional . tipo TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 16
    TK_PR_FLOAT   shift, and go to state 17
    TK_PR_BOOL    shift, and go to state 18
    TK_PR_CHAR    shift, and go to state 19
    TK_PR_STRING  shift, and go to state 20

    tipo  go to state 42


State 37

    8 novos_tipos_decla: TK_PR_CLASS TK_IDENTIFICADOR '[' lista_campos ']' . ';'

    ';'  shift, and go to state 43


State 38

    9 lista_campos: encapsulamento TK_IDENTIFICADOR . ':' lista_campos
   10             | encapsulamento TK_IDENTIFICADOR .

    ':'  shift, and go to state 44

    $default  reduce using rule 10 (lista_campos)


State 39

   18 bloco: '{' . comandos '}'

    TK_PR_IF          shift, and go to state 45
    TK_PR_WHILE       shift, and go to state 46
    TK_PR_DO          shift, and go to state 47
    TK_PR_INPUT       shift, and go to state 48
    TK_PR_OUTPUT      shift, and go to state 49
    TK_PR_RETURN      shift, and go to state 50
    TK_PR_STATIC      shift, and go to state 1
    TK_PR_FOREACH     shift, and go to state 51
    TK_PR_FOR         shift, and go to state 52
    TK_PR_SWITCH      shift, and go to state 53
    TK_PR_CASE        shift, and go to state 54
    TK_PR_BREAK       shift, and go to state 55
    TK_PR_CONTINUE    shift, and go to state 56
    TK_IDENTIFICADOR  shift, and go to state 57
    '['               shift, and go to state 58
    '{'               shift, and go to state 39

    $default  reduce using rule 127 (static_opcional)

    bloco                    go to state 59
    comandos                 go to state 60
    comando                  go to state 61
    local_variavel_decla     go to state 62
    atribuicao               go to state 63
    atribuicao_primitivo     go to state 64
    atribuicao_tipo_usuario  go to state 65
    entrada_saida_retorno    go to state 66
    chamada_funcao           go to state 67
    shift                    go to state 68
    retorno                  go to state 69
    break                    go to state 70
    continue                 go to state 71
    case                     go to state 72
    fluxo_controle           go to state 73
    static_opcional          go to state 74


State 40

   14 funcoes: static_opcional tipo TK_IDENTIFICADOR lista_parametros bloco .

    $default  reduce using rule 14 (funcoes)


State 41

   15 lista_parametros: parametro ',' . lista_parametros

    TK_PR_CONST  shift, and go to state 33

    $default  reduce using rule 129 (const_opcional)

    lista_parametros  go to state 75
    parametro         go to state 35
    const_opcional    go to state 36


State 42

   17 parametro: const_opcional tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 76


State 43

    8 novos_tipos_decla: TK_PR_CLASS TK_IDENTIFICADOR '[' lista_campos ']' ';' .

    $default  reduce using rule 8 (novos_tipos_decla)


State 44

    9 lista_campos: encapsulamento TK_IDENTIFICADOR ':' . lista_campos

    TK_PR_PRIVATE    shift, and go to state 26
    TK_PR_PUBLIC     shift, and go to state 27
    TK_PR_PROTECTED  shift, and go to state 28

    lista_campos    go to state 77
    encapsulamento  go to state 30


State 45

   71 fluxo_controle: TK_PR_IF . '(' expressao ')' TK_PR_THEN bloco
   72               | TK_PR_IF . '(' expressao ')' TK_PR_THEN bloco TK_PR_ELSE bloco

    '('  shift, and go to state 78


State 46

   75 fluxo_controle: TK_PR_WHILE . '(' expressao ')' TK_PR_DO bloco

    '('  shift, and go to state 79


State 47

   76 fluxo_controle: TK_PR_DO . bloco TK_PR_WHILE '(' expressao ')'

    '{'  shift, and go to state 39

    bloco  go to state 80


State 48

   45 entrada_saida_retorno: TK_PR_INPUT . expressao

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_IDENTIFICADOR  shift, and go to state 83
    '('               shift, and go to state 84
    '+'               shift, and go to state 85
    '-'               shift, and go to state 86
    '*'               shift, and go to state 87
    '!'               shift, and go to state 88
    '?'               shift, and go to state 89
    '#'               shift, and go to state 90
    '&'               shift, and go to state 91

    operando_exp_arit_literal  go to state 92
    chamada_funcao             go to state 93
    expressao                  go to state 94
    exp_aritmetica             go to state 95
    operando                   go to state 96
    expressao_unaria           go to state 97
    operador_unario            go to state 98
    exp_logica                 go to state 99
    exp_pipes                  go to state 100


State 49

   46 entrada_saida_retorno: TK_PR_OUTPUT . lista_expressao

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_IDENTIFICADOR  shift, and go to state 83
    '('               shift, and go to state 84
    '+'               shift, and go to state 85
    '-'               shift, and go to state 86
    '*'               shift, and go to state 87
    '!'               shift, and go to state 88
    '?'               shift, and go to state 89
    '#'               shift, and go to state 90
    '&'               shift, and go to state 91

    operando_exp_arit_literal  go to state 92
    lista_expressao            go to state 101
    chamada_funcao             go to state 93
    expressao                  go to state 102
    exp_aritmetica             go to state 95
    operando                   go to state 96
    expressao_unaria           go to state 97
    operador_unario            go to state 98
    exp_logica                 go to state 99
    exp_pipes                  go to state 100


State 50

   67 retorno: TK_PR_RETURN . expressao ';'

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_IDENTIFICADOR  shift, and go to state 83
    '('               shift, and go to state 84
    '+'               shift, and go to state 85
    '-'               shift, and go to state 86
    '*'               shift, and go to state 87
    '!'               shift, and go to state 88
    '?'               shift, and go to state 89
    '#'               shift, and go to state 90
    '&'               shift, and go to state 91
